US15645 Like Button Cleanup some regressions, abbreviate large counts

--- a/src/components/heart-button/heart-button.scss
+++ b/src/components/heart-button/heart-button.scss
@@ -2,12 +2,14 @@ a {
   font-family: sans-serif;
   display: block;
   color: #979797;
+  font-size: 80%;
   text-decoration: none;
   > * {
     vertical-align: middle;
   }
   &.on {
-    > span {
+    > span.heart,
+    > span.heart-o {
       > svg {
         fill: #c05c04;
       }
@@ -15,7 +17,8 @@ a {
   }
   &.on,
   &:hover {
-    > span {
+    > span.heart,
+    > span.heart-o {
       &.heart {
         display: inline-block;
       }
@@ -25,7 +28,8 @@ a {
     }
   }
   &:hover {
-    > span {
+    > span.heart,
+    > span.heart-o {
       background: #c05c04;
       > svg {
         fill: white;
@@ -33,16 +37,22 @@ a {
     }
   }
   span {
-    display: inline-block;
-    border: 1px solid;
-    border-radius: 50%;
-    width: 42px;
-    height: 42px;
-    svg {
-      margin: 9px;
-      width: 24px;
-      height: 24px;
-      fill: currentColor;
+    &.count {
+      padding-left: 0.5rem;
+    }
+    &.heart,
+    &.heart-o {
+      display: inline-block;
+      border: 1px solid;
+      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      svg {
+        margin: 9px;
+        width: 24px;
+        height: 24px;
+        fill: currentColor;
+      }
     }
     &.heart {
       display: none;
