US17019 Front End
update styles, add gradients and imgix backgrounds

--- a/src/components/shared-header/nav-bar/nav-bar.scss
+++ b/src/components/shared-header/nav-bar/nav-bar.scss
@@ -1,13 +1,15 @@
 header {
   background-color: $cr-cyan;
-  padding: 0 15px;
-  position: relative;
+  position: fixed;
+  width: 100vw;
+  z-index: 1;
 
   > div {
     @include container();
 
     display: flex;
     justify-content: space-between;
+    padding: 0 15px;
   }
 }
 
