--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -16,6 +16,20 @@ nav {
 
     @include container;
   }
+
+  &::after {
+    @media (max-width: $screen-md) {
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, .8) 100%);
+      content: '';
+      display: inline-block;
+      height: 100%;
+      opacity: .3;
+      position: absolute;
+      right: -25px;
+      top: 0;
+      width: 45px;
+    }
+  }
 }
 
 span {
