--- a/src/components/shared-header/nav-ctas/nav-ctas.scss
+++ b/src/components/shared-header/nav-ctas/nav-ctas.scss
@@ -19,6 +19,12 @@
     opacity: .5;
     text-transform: uppercase;
   }
+
+  &::after {
+    content: '';
+    display: block;
+    height: 150px;
+  }
 }
 
 // ---------------------------------------------------------
