--- a/src/components/shared-header/shared-header.scss
+++ b/src/components/shared-header/shared-header.scss
@@ -1,3 +1,5 @@
+// stylelint-disable a11y/no-display-none, a11y/font-size-is-readable
+
 $top-padding: 50px;
 $screen-md-portrait: 768px;
 $nav-bar-height: 47px;
@@ -5,26 +7,20 @@ $nav-bar-height: 47px;
 // ---------------------------------------------------------
 
 $nav-section-background-images: (
-  default
-  'https://crds-media.imgix.net/7B6MoNNiWMZOtdusfRpipl/ee5ee1e4bab8efcc56f84bf477da6469/nav-section-default-mobile.jpg'
-  'https://crds-media.imgix.net/1OTqm9FjFl6wtjCXAkA04V/bbe0eb060b034cd12c8620de520aa557/nav-section-default.jpg'
-  212.17deg,
+  default '7B6MoNNiWMZOtdusfRpipl/651049926b72990ae4f510a725cc2b26/nav-section-default-mobile.jpg'
+  '1OTqm9FjFl6wtjCXAkA04V/d44f06765e1fe0cf6a33ac3222b29302/nav-section-default.jpg' 212.17deg,
   come-visit
-  'https://crds-media.imgix.net/7tP5INZjs0NUsWUlUDRpKv/1cdbe5e8beb3169f2e7ba284e4785d82/nav-section-locations-mobile.jpg'
-  'https://crds-media.imgix.net/49tv3Wjdt28dPnim7TbR89/ef433202b082549ddfaa54b9cde5115f/nav-section-locations.jpg'
-  191.96deg,
+  '7tP5INZjs0NUsWUlUDRpKv/6af5b40c0caf555a52876d51037de2a2/nav-section-locations-mobile.jpg'
+  '49tv3Wjdt28dPnim7TbR89/6e9931a3700a3894510faa32d6dcea0f/nav-section-locations.jpg' 191.96deg,
   find-community
-  'https://crds-media.imgix.net/67LrfkAcGom2zu23JncnA0/36ec65f58c27e4beccb2662792651f41/nav-section-community-mobile.jpg'
-  'https://crds-media.imgix.net/zEx1Ajg3dIlh5SpvzQ1qI/5d98841bd0664c2ae6c2cef112a7074c/nav-section-community.jpg'
-  212.17deg,
+  '67LrfkAcGom2zu23JncnA0/6e3c9b52f38f455d69f8b441d0d60726/nav-section-community-mobile.jpg'
+  'zEx1Ajg3dIlh5SpvzQ1qI/981c79df660b3dc5b393338a7640b2a1/nav-section-community.jpg' 212.17deg,
   get-support
-  'https://crds-media.imgix.net/Cx02UnQr9sbVzjpXIcuqY/aad1e94297799b0817ba00884a2f7f2c/nav-section-support-mobile.jpg'
-  'https://crds-media.imgix.net/7i7YFUv6uY8MpwztZwIZE0/ed22995c91264a5c476d8e02c87e64dc/nav-section-support.jpg'
-  191.96deg,
+  'Cx02UnQr9sbVzjpXIcuqY/92b73ec270bf84af99c590bbd0173c54/nav-section-support-mobile.jpg'
+  '7i7YFUv6uY8MpwztZwIZE0/d093954885a5af29757040281c3b7e4c/nav-section-support.jpg' 191.96deg,
   watch-listen-read
-  'https://crds-media.imgix.net/5lMvnR6A9cavGG4aS0zzO8/247b6b738f33e4401b62ad53512919d8/nav-section-media-mobile.jpg'
-  'https://crds-media.imgix.net/59liSAMGW8dBCeUza5NUvj/6fe91fa808518e7a8997e6ba57103f95/nav-section-media.jpg'
-  212.17deg
+  '5lMvnR6A9cavGG4aS0zzO8/bcff1c0f42284f027a411b22a85bfb55/nav-section-media-mobile.jpg'
+  '59liSAMGW8dBCeUza5NUvj/b43c1e158ac599fd6debc40b916997d9/nav-section-media.jpg' 212.17deg
 );
 
 // ---------------------------------------------------------
@@ -40,7 +36,6 @@ $nav-section-background-images: (
     padding-top: $nav-bar-height;
   }
 
-  // stylelint-disable a11y/font-size-is-readable
   h3 {
     color: #fff;
     font-size: 11px;
@@ -83,72 +78,20 @@ nav {
   @each $background-image, $mobile-url, $desktop-url,
     $gradient-degree in $nav-section-background-images {
     @if $background-image == 'default' {
-      background-image: url('#{$mobile-url}?auto=format%2Ccompress');
+      background-image: url('https://crds-media.imgix.net/#{$mobile-url}?auto=format%2Ccompress');
 
       @media (min-width: $screen-md) {
-        background-image: url('#{$desktop-url}?auto=format%2Ccompress');
-      }
-
-      .gradient {
-        &::after {
-          background: linear-gradient(#{$gradient-degree}, rgba(0, 0, 0, .1) 0%, #000 100%);
-        }
+        background-image: url('https://crds-media.imgix.net/#{$desktop-url}?auto=format%2Ccompress');
       }
     }
 
     @else {
       &.section--#{$background-image} {
-        background-image: url('#{$mobile-url}');
+        background-image: url('https://crds-media.imgix.net/#{$mobile-url}?auto=format%2Ccompress');
 
         @media (min-width: $screen-md) {
-          background-image: url('#{$desktop-url}');
+          background-image: url('https://crds-media.imgix.net/#{$desktop-url}?auto=format%2Ccompress');
         }
-
-        .gradient {
-          &::after {
-            background: linear-gradient(#{$gradient-degree}, rgba(0, 0, 0, .1) 0%, #000 100%);
-          }
-        }
-      }
-    }
-  }
-
-  .gradient {
-    background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0) 54%,
-        rgba(0, 0, 0, 0) 81%,
-        rgba(0, 0, 0, 1) 100%,
-        rgba(0, 0, 0, .9) 100%
-      );
-    left: 0;
-    padding-top: (8 / 5) * 100%;
-    position: absolute;
-    top: $nav-bar-height;
-    width: 100%;
-    z-index: 1;
-
-    @media (max-width: $screen-md) {
-      bottom: -$nav-bar-height * 2;
-    }
-
-    @media (min-width: $screen-md) {
-      padding-top: (3 / 8) * 100%;
-    }
-
-    &::after {
-      bottom: 0;
-      content: '';
-      left: 0;
-      padding-top: (8 / 5) * 100%;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 2;
-
-      @media (min-width: $screen-md) {
-        bottom: unset;
-        padding-top: (3 / 8) * 100%;
       }
     }
   }
@@ -190,21 +133,7 @@ nav {
 
     .subnavigation {
       @media (min-width: $screen-md) {
-        width: 100%;
-      }
-
-      @media (min-width: $screen-md) {
         width: calc(50% - 40px);
-      }
-    }
-  }
-
-  &.section--come-visit {
-    .gradient {
-      height: 100vh;
-
-      &::after {
-        height: 100vh;
       }
     }
   }
