--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -1,9 +1,9 @@
+.give-nav,
 .profile-nav {
   @include nav-items;
 
-  $image: 'https://crds-media.imgix.net/WgeyOtqcX4tb1uQlPCtcc/072edb0cc0185a6985b56e5ffd1c8458/nav-profile-bkg-default.jpg?auto=format%2Ccompress';
-
-  background: $cr-black url($image) no-repeat;
+  background-color: $cr-black;
+  background-repeat: no-repeat;
   background-size: 100%;
   height: 100vh;
   left: 0;
@@ -23,5 +23,18 @@
 
   @media (min-width: $container-large-desktop) {
     margin-right: 0;
+  }
+}
+
+$imgix-url: 'https://crds-media.imgix.net/';
+
+$background-images: (
+  give: '6sNxa1MWhMOfjhAB47yTCa/fe148ae3581a60e0e076f7e6a2c5fd21/nav-give.jpg',
+  profile: 'WgeyOtqcX4tb1uQlPCtcc/072edb0cc0185a6985b56e5ffd1c8458/nav-profile-bkg-default.jpg'
+);
+
+@each $nav-type, $image in $background-images {
+  .#{$nav-type}-nav {
+    background-image: url('#{$imgix-url}#{$image}?auto=format%2Ccompress');
   }
 }
