fix z-index in shared header nav

--- a/src/components/shared-header/shared-header.scss
+++ b/src/components/shared-header/shared-header.scss
@@ -62,9 +62,11 @@ nav {
   top: 0;
   transform: translateX(0);
   width: 100vw;
+  z-index: 1;
 
   &.is-showing {
     display: block;
+
   }
 
   @media (min-width: $screen-md-portrait) {
