--- a/src/components/shared-header/nav-ctas/nav-ctas.scss
+++ b/src/components/shared-header/nav-ctas/nav-ctas.scss
@@ -72,6 +72,14 @@
       line-height: 18px;
     }
   }
+
+  &:hover {
+    &-content {
+      h4 {
+        color: darken($cr-white, 20);
+      }
+    }
+  }
 }
 
 // ---------------------------------------------------------
