de6806 navigation adjustments
ensure close button persists on mobile navigation screens
add background gradient to close button

--- a/src/components/shared-header/global-nav/global-nav.scss
+++ b/src/components/shared-header/global-nav/global-nav.scss
@@ -102,12 +102,14 @@ $has-close-button: (
     }
 
     &.nav-is-showing {
-      .#{$icon} {
-        display: none;
-      }
+      @media (min-width: $screen-md) {
+        .#{$icon} {
+          display: none;
+        }
 
-      .close {
-        display: block;
+        .close {
+          display: block;
+        }
       }
     }
   }
