--- a/src/assets/stylesheets/globals/_navigation.scss
+++ b/src/assets/stylesheets/globals/_navigation.scss
@@ -5,8 +5,7 @@
 
   div {
     @if $nav-type == 'main-nav' {
-      margin-bottom: 30px;
-      padding: 30px 20px 20px;
+      padding: 30px 20px 0;
     }
 
     @else {
