de6806 navigation adjustments
ensure the close button closes the menu when clicked

--- a/src/components/shared-header/shared-header.scss
+++ b/src/components/shared-header/shared-header.scss
@@ -219,6 +219,7 @@ nav {
     border-radius: 50%;
     bottom: $padding;
     box-shadow: 0 5px 24px -5px rgba(0, 0, 0, .75);
+    cursor: pointer;
     height: $circle-size;
     position: absolute;
     width: $circle-size;
