--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -3,6 +3,7 @@ nav {
   @include font-family-base;
 
   background-color: $cr-white;
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .14);
   font-size: 14px;
   padding-left: 20px;
   position: relative;
