--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -5,8 +5,9 @@
   background-color: $cr-black;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 100vh;
+  height: 100%;
   left: 0;
+  overflow-y: scroll;
   position: fixed;
   top: 47px;
   width: 100vw;
@@ -23,6 +24,12 @@
 
   @media (min-width: $container-large-desktop) {
     margin-right: 0;
+  }
+
+  ul {
+    &:last-of-type {
+      padding-bottom: 30px;
+    }
   }
 }
 
