de6809 snail trail has a visible scroll bar
remove scroll bar

--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -58,6 +58,11 @@ ul {
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   overflow-y: hidden;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 li {
