US17260-Shared-Header-Auth 	- Adds background color for default profile icon

--- a/src/components/shared-header/global-nav/global-nav.scss
+++ b/src/components/shared-header/global-nav/global-nav.scss
@@ -60,6 +60,7 @@ header {
     width: $size;
     border-radius: 50%;
     border: 1.5px solid $cr-white;
+    background-color: $cr-white;
     background-size: $size;
     background-position: center;
     background-repeat: no-repeat;
