--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -39,6 +39,7 @@ span {
   font-weight: 600;
   padding: 11px 0;
   text-transform: capitalize;
+  white-space: nowrap;
 
   &::after {
     border-right: 1px solid #d8d8d8;
