--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -7,7 +7,7 @@
   background-size: 100%;
   height: 100%;
   left: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: fixed;
   top: 47px;
   width: 100vw;
