--- a/src/components/shared-header/nav-section/nav-section.scss
+++ b/src/components/shared-header/nav-section/nav-section.scss
@@ -1,24 +1,3 @@
-@mixin nav-is-active {
-  background-color: $cr-cyan;
-
-  &::after {
-    $size: 63px;
-
-    border-color: transparent transparent transparent $cr-cyan;
-    border-style: solid;
-    border-width: $size 0 $size 50px;
-    content: '';
-    display: inline-block;
-    height: 0;
-    position: absolute;
-    right: -50px;
-    top: 0;
-    width: 0;
-  }
-}
-
-// ---------------------------------------------------------
-
 nav-section {
   a {
     cursor: pointer;
@@ -35,15 +14,50 @@ nav-section {
       width: 86%;
     }
 
+    &::after {
+      $size: 63px;
+
+      border-color: transparent transparent transparent $cr-cyan;
+      border-style: solid;
+      border-width: $size 0 $size 50px;
+      content: '';
+      height: 0;
+      left: 0;
+      position: absolute;
+      top: 0;
+      visibility: hidden;
+      width: 0;
+    }
+
+    &::before {
+      background-color: $cr-cyan;
+      content: '';
+      display: inline-block;
+      height: 100%;
+      left: 0;
+      position: absolute;
+    }
+
     &:hover {
       @media (min-width: $screen-md) {
-        @include nav-is-active;
+        &::before {
+          width: 4px;
+        }
       }
     }
 
     &.is-active {
       @media (min-width: $screen-md) {
-        @include nav-is-active;
+        &::after {
+          left: 100%;
+          transition: left .4s ease;
+          visibility: visible;
+        }
+
+        &::before {
+          transition: width .4s ease;
+          width: 100%;
+        }
       }
     }
 
