--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -26,7 +26,7 @@ nav {
       height: 100%;
       opacity: .3;
       position: absolute;
-      right: 0px;
+      right: 0;
       top: 0;
       width: 20px;
     }
