--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -33,21 +33,13 @@ nav {
   }
 }
 
-span {
+strong {
   color: $cr-gray-dark;
   display: inline-block;
   font-weight: 600;
   padding: 11px 0;
   text-transform: capitalize;
   white-space: nowrap;
-
-  &::after {
-    border-right: 1px solid #d8d8d8;
-    content: '';
-    height: 100%;
-    margin-left: 15px;
-    width: 1px;
-  }
 }
 
 ul {
@@ -61,6 +53,16 @@ ul {
   overflow-x: scroll;
   overflow-y: hidden;
   scrollbar-width: none;
+
+  &:not(:last-of-type) {
+    &::after {
+      border-right: 1px solid #d8d8d8;
+      content: '';
+      height: calc(100% - 22px);
+      margin-left: 15px;
+      width: 1px;
+    }
+  }
 
   &::-webkit-scrollbar {
     display: none;
@@ -95,24 +97,24 @@ li {
   flex: none;
   text-transform: capitalize;
 
-  &:last-of-type {
-    a {
-      color: $cr-cyan;
-      position: relative;
+  // &:last-of-type {
+  //   a {
+  //     color: $cr-cyan;
+  //     position: relative;
 
-      &::before {
-        border-right: 1px solid #d8d8d8;
-        content: '';
-        display: inline-block;
-        height: calc(100% - 22px);
-        left: 0;
-        position: absolute;
-        width: 1px;
-      }
+  //     &::before {
+  //       border-right: 1px solid #d8d8d8;
+  //       content: '';
+  //       display: inline-block;
+  //       height: calc(100% - 22px);
+  //       left: 0;
+  //       position: absolute;
+  //       width: 1px;
+  //     }
 
-      &:hover {
-        color: darken($cr-cyan, 10);
-      }
-    }
-  }
+  //     &:hover {
+  //       color: darken($cr-cyan, 10);
+  //     }
+  //   }
+  // }
 }
