DE6884-mobile-hamburger-nav 	- Adds scss to compensate for new JSON titles

--- a/src/components/shared-header/shared-header.scss
+++ b/src/components/shared-header/shared-header.scss
@@ -114,11 +114,8 @@ nav {
       padding-bottom: 0;
     }
   }
-
-  &.section--come-visit,
-  &.section--find-community,
-  &.section--get-support,
-  &.section--watch-listen-read {
+  
+  &[class*="section--"] {
     .content {
       @media (max-width: $screen-md) {
         transform: translateX(-100vw);
