--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -3,7 +3,7 @@ nav {
   @include font-family-base;
 
   background-color: $cr-white;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .14);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.14);
   font-size: 14px;
   padding-left: 20px;
   position: relative;
@@ -20,11 +20,11 @@ nav {
 
   &::after {
     @media (max-width: $screen-md) {
-      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, .8) 100%);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
       content: '';
       display: inline-block;
       height: 100%;
-      opacity: .3;
+      opacity: 0.3;
       position: absolute;
       right: 0;
       top: 0;
@@ -33,21 +33,13 @@ nav {
   }
 }
 
-span {
+strong {
   color: $cr-gray-dark;
   display: inline-block;
   font-weight: 600;
   padding: 11px 0;
   text-transform: capitalize;
   white-space: nowrap;
-
-  &::after {
-    border-right: 1px solid #d8d8d8;
-    content: '';
-    height: 100%;
-    margin-left: 15px;
-    width: 1px;
-  }
 }
 
 ul {
@@ -62,31 +54,18 @@ ul {
   overflow-y: hidden;
   scrollbar-width: none;
 
+  &:not(:last-of-type) {
+    &::after {
+      border-right: 1px solid #d8d8d8;
+      content: '';
+      height: calc(100% - 22px);
+      margin-left: 15px;
+      width: 1px;
+    }
+  }
+
   &::-webkit-scrollbar {
     display: none;
-  }
-}
-
-a {
-  color: $cr-gray-dark;
-  display: block;
-  font-weight: 300;
-  padding: 11px 15px;
-  position: relative;
-  text-decoration: none;
-
-  &.is-active,
-  &:hover {
-    &::after {
-      background-color: $cr-cyan;
-      bottom: 0;
-      content: '';
-      display: inline-block;
-      height: 2px;
-      left: 15px;
-      position: absolute;
-      width: calc(100% - 30px);
-    }
   }
 }
 
@@ -94,25 +73,4 @@ li {
   display: inline-block;
   flex: none;
   text-transform: capitalize;
-
-  &:last-of-type {
-    a {
-      color: $cr-cyan;
-      position: relative;
-
-      &::before {
-        border-right: 1px solid #d8d8d8;
-        content: '';
-        display: inline-block;
-        height: calc(100% - 22px);
-        left: 0;
-        position: absolute;
-        width: 1px;
-      }
-
-      &:hover {
-        color: darken($cr-cyan, 10);
-      }
-    }
-  }
 }
