--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -3,7 +3,7 @@ nav {
   @include font-family-base;
 
   background-color: $cr-white;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .14);
   font-size: 14px;
   padding-left: 20px;
   position: relative;
@@ -14,17 +14,22 @@ nav {
 
   > div {
     display: flex;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    position: relative;
+    scrollbar-width: none;
 
     @include container;
   }
 
   &::after {
     @media (max-width: $screen-md) {
-      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, .8) 100%);
       content: '';
       display: inline-block;
       height: 100%;
-      opacity: 0.3;
+      opacity: .3;
       position: absolute;
       right: 0;
       top: 0;
@@ -37,6 +42,7 @@ strong {
   color: $cr-gray-dark;
   display: inline-block;
   font-weight: 600;
+  margin-right: 15px;
   padding: 11px 0;
   text-transform: capitalize;
   white-space: nowrap;
@@ -49,17 +55,12 @@ ul {
   display: flex;
   margin-bottom: 0;
   margin-top: 0;
-  -webkit-overflow-scrolling: touch;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  scrollbar-width: none;
 
   &:not(:last-of-type) {
     &::after {
       border-right: 1px solid #d8d8d8;
       content: '';
       height: calc(100% - 22px);
-      margin-left: 15px;
       width: 1px;
     }
   }
@@ -71,6 +72,22 @@ ul {
 
 li {
   display: inline-block;
-  flex: none;
   text-transform: capitalize;
+  white-space: nowrap;
+}
+
+.subscribe-button {
+  background-color: transparent;
+  border: 0;
+  color: $cr-cyan;
+  cursor: pointer;
+  font: inherit;
+  line-height: normal;
+  margin: 0;
+  padding: 11px 15px;
+
+  &:focus {
+    border: 0;
+    outline: none;
+  }
 }
