--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -6,10 +6,11 @@
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100%;
+  max-height: 800px;
   left: 0;
-  overflow-y: auto;
+  overflow-y: scroll;
   position: fixed;
-  top: 47px;
+  top: 48.25px;
   width: 100vw;
   z-index: 2;
 
@@ -47,6 +48,8 @@
     top: 0;
     width: 100%;
     z-index: -1;
+
+    padding: 0;
   }
 
   .profile-nav-img {
@@ -61,5 +64,9 @@
     top: 0;
     width: 100%;
     z-index: -2;
+  }
+
+  div {
+    padding-bottom: 0px;
   }
 }
