--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -49,7 +49,6 @@
     width: 100%;
     z-index: -1;
 
-    padding-bottom: 125px;
   }
 
   .profile-nav-img {
@@ -66,7 +65,9 @@
     z-index: -2;
   }
 
-  div {
-    padding-bottom: 0px;
+  @media (min-width: $screen-md) {
+    div {
+      padding-bottom: 0px;
+    }
   }
 }
