DE6880-profile-scroll 	- Adjusts height to vh to accomodate for mobile

--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -5,7 +5,7 @@
   background-color: $cr-black;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: auto;
+  height: 100vh;
   max-height: 100vh;
   left: 0;
   overflow-y: scroll;
