--- a/src/components/subscribe/subscribe-modal.scss
+++ b/src/components/subscribe/subscribe-modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  background-color: rgba($cr-black, .8);
+  background-color: rgba($cr-black, 0.8);
   bottom: 0;
   left: 0;
   opacity: 0;
@@ -15,33 +15,38 @@
     visibility: visible;
     z-index: 11;
 
-    .modal-container {
+    .modal-content {
       transform: translateY(0);
     }
   }
-
-  &-container {
-    background: $cr-white;
-    font-size: 16px;
-    margin: 15px auto;
-    max-width: 600px;
-    transform: translateY(-50px);
-    transition: transform 300ms ease;
-    will-change: transform;
-  }
-
-  &-content {
-    padding: 40px;
-  }
 }
 
-h2 {
+.modal-content {
+  background: $cr-white;
+  font-size: 16px;
+  margin: 45px auto;
+  max-width: 600px;
+  position: relative;
+  transform: translateY(-50px);
+  transition: transform 0.35s ease;
+  will-change: transform;
+}
+
+.modal-body {
+  padding: 40px;
+}
+
+// ---------------------------------------- | Content
+
+.modal-title {
   @include font-family-condensed-extra;
   @include font-size-h1;
 
   margin: 0;
   text-transform: uppercase;
 }
+
+// ---------------------------------------- | Forms
 
 input {
   background-image: none;
@@ -56,13 +61,13 @@ input {
     font-size: 16px;
     line-height: 1.5;
     padding: 8px 10px;
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     width: 100%;
   }
 
   &:focus {
     border-color: #8bceed;
-    box-shadow: inset 0 0 0 1px rgba(139, 206, 237, .5);
+    box-shadow: inset 0 0 0 1px rgba(139, 206, 237, 0.5);
   }
 
   &[type='submit'] {
@@ -88,11 +93,13 @@ label {
   max-width: 100%;
 }
 
-.close {
+// ---------------------------------------- | Close Button
+
+.modal-close {
   $size: 25px;
 
   appearance: none;
-  background-color: rgba(187, 187, 187, .6);
+  background-color: rgba(187, 187, 187, 0.6);
   border-image: none;
   border-radius: 50%;
   border-style: none;
