--- a/src/components/snail-trail/snail-trail.scss
+++ b/src/components/snail-trail/snail-trail.scss
@@ -2,7 +2,7 @@ nav {
   @include font-family-base;
 
   background-color: $cr-white;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .14);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.14);
   font-size: 14px;
   padding-left: 20px;
   position: relative;
@@ -24,11 +24,11 @@ nav {
 
   &::after {
     @media (max-width: $screen-md) {
-      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, .8) 100%);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
       content: '';
       display: inline-block;
       height: 100%;
-      opacity: .3;
+      opacity: 0.3;
       position: absolute;
       right: 0;
       top: 0;
@@ -73,20 +73,4 @@ li {
   display: inline-block;
   text-transform: capitalize;
   white-space: nowrap;
-}
-
-.subscribe-button {
-  background-color: transparent;
-  border: 0;
-  color: $cr-cyan;
-  cursor: pointer;
-  font: inherit;
-  line-height: normal;
-  margin: 0;
-  padding: 11px 15px;
-
-  &:focus {
-    border: 0;
-    outline: none;
-  }
 }
